RESOLVED FIXED279490
Unable to zoom out all the way on one specific encrypted PDF
https://bugs.webkit.org/show_bug.cgi?id=279490
Summary Unable to zoom out all the way on one specific encrypted PDF
Tim Horton
Reported 2024-09-10 22:47:21 PDT
Unable to zoom out all the way on one specific encrypted PDF
Attachments
Tim Horton
Comment 1 2024-09-10 22:47:22 PDT
Tim Horton
Comment 2 2024-09-10 22:49:47 PDT
Abrar Rahman Protyasha
Comment 3 2024-09-11 00:09:33 PDT
EWS
Comment 4 2024-09-11 09:59:56 PDT
Committed 283487@main (13d7a93baa0c): <https://commits.webkit.org/283487@main> Reviewed commits have been landed. Closing PR #33449 and removing active labels.
EWS
Comment 5 2024-09-11 15:16:59 PDT
Committed 283286.19@safari-7620-branch (18cb518aad5c): <https://commits.webkit.org/283286.19@safari-7620-branch> Reviewed commits have been landed. Closing PR #1734 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.