Unable to zoom out all the way on one specific encrypted PDF https://bugs.webkit.org/show_bug.cgi?id=279490 rdar://135716681

Reviewed by NOBODY (OOPS!).

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::attemptToUnlockPDF):
Adjust the condition from 282007@main: just because we have a page count doesn't
mean we have accurate page geometry. Assume we don't, and reset scale when unlocking.

The isLocked() check seems reundant as well, but I'll leave it for now
since it's not as actively harming anything.