Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h
@@ -207,6 +207,9 @@ public:
 
     void setPDFDisplayModeForTesting(const String&) final;
 
+    double minScaleFactor() const final;
+    double maxScaleFactor() const final;
+
 private:
     explicit UnifiedPDFPlugin(WebCore::HTMLPlugInElement&);
     bool isUnifiedPDFPlugin() const override { return true; }
@@ -624,6 +627,11 @@ private:
 #if ENABLE(UNIFIED_PDF_DATA_DETECTION)
     std::unique_ptr<PDFDataDetectorOverlayController> m_dataDetectorOverlayController;
 #endif
+
+    // FIXME: We should rationalize these with the values in ViewGestureController.
+    // For now, we'll leave them differing as they do in PDFPlugin.
+    static constexpr double minimumZoomScale = 0.2;
+    static constexpr double maximumZoomScale = 6.0;
 };
 
 WTF::TextStream& operator<<(WTF::TextStream&, RepaintRequirement);
